# fpmas-classic-prey-predator

./: CMakeLists.txt  README.md  config.yml
include/: agent.h  config.h  grass.h  model.h  output.h
src/: agent.cpp  config.cpp  grass.cpp  main.cpp  model.cpp  output.cpp
